# groq-whisper

./: .gitignore  AGENTS.md
backend/: .gitignore  README.md  pyproject.toml  serve.py  transcribe.py
backend/src/groq_whisper_service/: __main__.py  api.py  audio_capture.py  client_pool.py  persistence.py  rolling_transcriber.py  service.py  stable_prefix.py
backend/tests/: test_client_pool.py  test_persistence.py  test_service.py  test_stable_prefix.py
backend/tests/fixtures/: 30s.word-segment.json
exec-plans/: exec-plan-20260419-011112-multi-api-key-rotation.md  plan.md
ui/: GroqWhisper.sln
ui/GroqWhisper/: App.xaml  App.xaml.cs  GroqWhisper.csproj  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  app.manifest
ui/GroqWhisper.Core/: BackendStateCoordinator.cs  DpapiSecretProtector.cs  GroqWhisper.Core.csproj  ISecretProtector.cs  TranscriptionStartPreparation.cs  TranscriptionStartRequest.cs  WindowsSecretStore.cs
ui/GroqWhisper.Tests/: BackendStateCoordinatorTests.cs  GroqWhisper.Tests.csproj  TranscriptionStartPreparationTests.cs  TranscriptionStartRequestTests.cs  WindowsSecretStoreTests.cs
ui/GroqWhisper/Models/: ServiceState.cs  Session.cs  TranscriptionPatch.cs
ui/GroqWhisper/Pages/: DevicesPage.xaml  DevicesPage.xaml.cs  HistoryPage.xaml  HistoryPage.xaml.cs  LivePage.xaml  LivePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
ui/GroqWhisper/Services/: BackendService.cs  TranscriptionApiClient.cs
ui/GroqWhisper/ViewModels/: HistoryViewModel.cs  LiveViewModel.cs
